# parallelProgramming

./: .clang-format  .gitignore  Readme.md
eulerNumber/: countEuler.c  countEuler.h  main.c  makefile
firstTask/: circleSnowball.c  harmonicSeries.c  helloWorld.c
lab1/: dopusk.c  funAnimated.py  parallel.c  params.h  perf.sh  performance.py  sequential.c  solve_and_play_animation_seq.sh  solve_and_plot3d_seq.sh
lab2/: parallel.c  params.h  sequential.c
mpi/eulerNumber/: Readme.md  countEuler.h  makefile
mpi/firstTask/: Readme.md  harmonicSeries.c
mpi/lab1/: performance.py  plot3d.py  sequential.c
mpi/smallExtraTasks/: oneSide.c  writeFile.c
mpi/sorting/: oddEvenBase.h  parallelOddEven.c  perf.py
opencl/matrixMultiplication/: CMakeLists.txt
opencl/matrixMultiplication/include/: App.hpp  IOpenCLApp.hpp  matrix.hpp
opencl/matrixMultiplication/samples/: CMakeLists.txt  generator.py  mul.cpp  opencl_base.cpp  opencl_cache.cpp  parallel_block_mul.cpp  perf.py  seq_base_mul.cpp
opencl/matrixMultiplication/sources/: CMakeLists.txt  IOpenCLApp.cpp
opencl/matrixMultiplication/sources/kernels/: cache.cl  simple.cl
opencl/matrixMultiplication/tests/test1/: answer.txt  src.txt
opencl/matrixMultiplication/tests/test2/: answer.txt
opencl/matrixMultiplication/tests/test3/: answer.txt  src.txt
openmp/eratosfene_sieve/: CMakeLists.txt
openmp/eratosfene_sieve/include/: sieve.hpp  timer.hpp
openmp/eratosfene_sieve/perf/: perf.py
openmp/eratosfene_sieve/samples/: CMakeLists.txt  main.cpp
openmp/eratosfene_sieve/sources/: CMakeLists.txt  sieve.cpp
openmp/extraTasks/: CMakeLists.txt  balance.c  copyin.c  copypriv.c  nested.c  plot_distrib.py
openmp/lab1/: CMakeLists.txt
openmp/lab1/include/: common.hpp
openmp/lab1/samples/: 1a.cpp  2b.cpp  3c.cpp  CMakeLists.txt  etalon.cpp  perf.py
openmp/matrix_multiplication/: CMakeLists.txt
openmp/matrix_multiplication/include/: matrix.hpp
openmp/matrix_multiplication/pics/: plot.py  result.txt
openmp/matrix_multiplication/samples/: CMakeLists.txt  mul.cpp  parallel_base_mul.cpp  parallel_block_SIMD_mul.cpp  parallel_block_transpose_mul.cpp  parallel_optimize_mul.cpp  parallel_transpose_mul.cpp  seq_transpose_mul.cpp
openmp/matrix_multiplication/tests/: generator.py
openmp/matrix_multiplication/tests/test1/: answer.txt  src.txt
openmp/matrix_multiplication/tests/test2/: answer.txt  src.txt
openmp/sorting/: CMakeLists.txt
openmp/sorting/include/: sort.hpp
openmp/sorting/pics/: plot.py
openmp/sorting/samples/: CMakeLists.txt  sort.cpp
openmp/sorting/tests/: generator.py
openmp/sorting/tests/test1/: src.txt
openmp/sorting/tests/test2/: src.txt
openmp/starterPack/: CMakeLists.txt  circle.c  harmonicSeries.c  helloWorld.c
smallExtraTasks/: myCommunicator.c  simpleClient.c  simpleServer.c  testSend.c
sorting/: makefile  oddEvenBase.c  sequenceOddEven.c  test.sh
threads/lab2/: parallel.c
threads/threadBase/: circleSync.c  harmonicSeries.c  helloWorld.c
